--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   top_snackbar_flutter: ^3.1.0
   table_calendar: ^3.0.9
   intl: 0.18.0
+  syncfusion_flutter_calendar: ^23.1.36
 
 dev_dependencies:
   flutter_test:
